@@ -8,6 +8,7 @@ import org.springframework.http.HttpMethod;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.config.annotation.authentication.builders.AuthenticationManagerBuilder;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
+import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
@@ -20,6 +21,7 @@ import java.util.Arrays;
 import java.util.List;
 
 @Configuration
+
 public class SecurityConfig {
 
     @Bean
@@ -31,12 +33,14 @@ public class SecurityConfig {
 
     @Bean
     public CorsConfigurationSource corsSource(){
-        CorsConfiguration configurationSource = new CorsConfiguration();
-        configurationSource.setAllowedOrigins(List.of("*"));
-        configurationSource.setAllowedMethods(List.of("*"));
+        CorsConfiguration corsConfig  = new CorsConfiguration();
+        corsConfig.setAllowedOrigins(Arrays.asList("*"));
+        corsConfig.setAllowedMethods(Arrays.asList("*"));
+        corsConfig.setAllowedHeaders(Arrays.asList("*"));
+
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**",configurationSource);
+        source.registerCorsConfiguration("/**",corsConfig );
 
         return source;
     }
@@ -44,12 +48,19 @@ public class SecurityConfig {
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http, HttpSession httpSession, CorsConfigurationSource corsSource, CustomFilter customFilter) throws Exception {
         return  http
+
                 .csrf(AbstractHttpConfigurer::disable)
+
                 .cors(cors -> cors.configurationSource(corsSource))
                 .sessionManagement(session ->session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
                 .authorizeHttpRequests(request ->{
-                    request.requestMatchers("/authen/**","/files/**","/cart/**","/money","/comment/**").permitAll();
-                    request.requestMatchers(HttpMethod.GET , "/product/**","/connection/**","/category/**").permitAll();
+                    request.requestMatchers("/authen/login/**","/authen/signup/**",
+                            "/files/**","/cart/**","/money/**","/comment/**",
+                            "/user/upload-avatar/**","/user/detail-user/**",
+                            "/authen/change-pass/**","/user/log-out-all/**"
+                            ).permitAll();
+                    request.requestMatchers(HttpMethod.GET , "/product/**","/connection/**",
+                            "/category/**","/payment/**").permitAll();
                     request.requestMatchers("/**").hasRole("ADMIN");
                     request.anyRequest().authenticated();
                 })
